--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.datasource.hikari.maximum-pool-size=10
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.error.include-stacktrace=never
