Atualizações de segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:FXDROP2025@}
